--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/sequelize": "^8.0.0",
+    "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
+    "sequelize": "^6.6.5",
+    "sequelize-typescript": "^2.1.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -48,6 +52,7 @@
     "@nrwl/workspace": "12.6.2",
     "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
+    "@types/sequelize": "^4.28.10",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "dotenv": "8.2.0",
