--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
+    "sequelize-cli": "^6.2.0",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "typescript": "~4.3.5"
