--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/sequelize": "^8.0.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.1.15",
