--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/sequelize": "^4.28.10",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "e": "^0.2.1",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
