Creating angular application.

--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,13 @@
     },
     "api-interfaces": {
       "tags": []
+    },
+    "front": {
+      "tags": []
+    },
+    "front-e2e": {
+      "tags": [],
+      "implicitDependencies": ["front"]
     }
   }
 }
