--- a/package.json
+++ b/package.json
@@ -23,10 +23,19 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^12.1.0",
+    "@angular/common": "^12.1.0",
+    "@angular/compiler": "^12.1.0",
+    "@angular/core": "^12.1.0",
+    "@angular/forms": "^12.1.0",
+    "@angular/platform-browser": "^12.1.0",
+    "@angular/platform-browser-dynamic": "^12.1.0",
+    "@angular/router": "^12.1.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
@@ -38,13 +47,21 @@
     "rxjs": "^7.1.15",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^12.1.0",
+    "@angular-eslint/eslint-plugin": "~12.3.0",
+    "@angular-eslint/eslint-plugin-template": "~12.3.0",
+    "@angular-eslint/template-parser": "~12.3.0",
+    "@angular/compiler-cli": "^12.1.0",
+    "@angular/language-service": "^12.1.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/angular": "^12.6.2",
     "@nrwl/cli": "12.6.2",
+    "@nrwl/cypress": "12.6.2",
     "@nrwl/eslint-plugin-nx": "12.6.2",
     "@nrwl/jest": "12.6.2",
     "@nrwl/linter": "12.6.2",
@@ -57,11 +74,14 @@
     "@types/sequelize": "^4.28.10",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
+    "cypress": "^7.3.0",
     "dotenv": "^8.2.0",
     "e": "^0.2.1",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.0.3",
+    "jest-preset-angular": "9.0.4",
     "prettier": "^2.3.1",
     "sequelize-cli": "^6.2.0",
     "ts-jest": "27.0.3",
