--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "mini-css-extract-plugin": "2.2.0",
     "@angular-devkit/build-angular": "^12.1.0",
     "@angular-eslint/eslint-plugin": "~12.3.0",
     "@angular-eslint/eslint-plugin-template": "~12.3.0",
